infra/web/05-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      priority: 101
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
    - kind: Rule
      match: PathPrefix(`/argocd`)
      priority: 100
      services:
        - name: argocd-server
          port: 80
